//-------------------------------------------------------------
//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//
//-------------------------------------------------------------


syntax = "proto3";
package sysds;

option java_package = "org.apache.sysds.protobuf";
option java_outer_classname = "SysdsProtos";
option java_multiple_files = false;

message Frame {
    repeated Row rows = 1;
}

message Row {
    repeated string column_names = 1;
    repeated string column_data = 2;
    repeated Schema column_schema = 3;
}

message Schema {
    enum ValueType {
        FP32 = 0;
        FP64 = 1;
        INT32 = 2;
        INT64 = 3;
        BOOLEAN = 4;
        STRING = 5;
        UNKNOWN = 6;
    }
    repeated ValueType valueType = 1;
}
